--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,88 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
-}
-
-.no-button {
-  background: none;
-  border: none;
+* {
   padding: 0;
-  cursor: pointer;
-  color: #1b89bc;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  background: rgb(188, 218, 188);
+}
+/* Header code */
+header {
+  background: rgb(66, 17, 17);
+  color: rgb(188, 218, 188);
+  padding: 1% 0 1% 0;
+}
+.nav {
+  display: flex;
+  line-height: 2.5rem;
+  padding-bottom: 3%;
+}
+.link {
+  color: rgb(188, 218, 188);
+  font-size: 1.5rem;
+  margin: 0 5% 0 5%;
   text-decoration: none;
-  font-size: 100%;
+}
+.app-title {
+  margin-left: 10%;
+  margin-top: 3%;
 }
 
-.no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
+/* Card form code */
+.card {
+  width: 40%;
+  margin: 5% 35% 0 35%;
+  border: 1px solid grey;
+  border-radius: 15px;
+}
+.card-header {
+  font-size: 1.5rem;
+  padding: 1% 0 1% 1%;
+  background: rgb(66, 17, 17);
+  color: white;
+  border-radius: 10px 10px 10px 10px;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
+/* Signup form code */
+#signup {
+  padding: 3%;
+  font-size: 1.3rem;
+  line-height: 1.3rem;
+}
+.form-group {
+  margin: 2% 0 2% 0;
+}
+.card-body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.form-label {
+  font-size: 1.2rem;
+  width: 30%;
+  margin-top: 2%;
+}
+.form-input {
+  width: 50%;
+  margin-top: 2%;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+}
+.btn {
+  width: 30%;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding: 1%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.login-link {
+  padding: 1%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.btn:hover {
+  cursor: pointer;
 }
